--- a/backend/src/main/resources/objectname_mapping.json
+++ b/backend/src/main/resources/objectname_mapping.json
@@ -1,12 +1,17 @@
 {
-    "properties": {
-       "host": {
-          "type": "string",
-          "index": "not_analyzed"
-       },
-       "name": {
-          "type": "string",
-          "index": "not_analyzed"
-       }
+  "properties": {
+    "host": {
+      "type": "string",
+      "index": "not_analyzed"
+    },
+    "name": {
+      "type": "string",
+      "index": "not_analyzed"
+    },
+    "suggest": {
+      "type": "string",
+      "index_analyzer": "completion_analyzer",
+      "search_analyzer": "search_analyzer"
     }
+  }
 }
